src/main/java/ru/projects/test_task_aikamsoft/utils/error/WrongArgumentCountException.java
package ru.projects.test_task_aikamsoft.utils.error;

public class WrongArgumentCountException extends Exception{

    public WrongArgumentCountException(String message){
        super(message);
    }
}
